# gst-autofocus

./: .gitignore  ChangeLog.md  NEWS  README  README.md  meson.build
src/: Makefile.am  autofocusControl.c  autofocusControl.h  curve_fit.c  curve_fit.h  gstautofocus.c  gstautofocus.h  i2c_control.c  logger.c
src/.deps/: libgstautofocus_la-autofocusControl.Plo  libgstautofocus_la-gstautofocus.Plo  libgstautofocus_la-i2c.Plo  libgstautofocus_la-i2c_control.Plo  libgstautofocus_la-logger.Plo
src/.libs/: libgstautofocus.exp  libgstautofocus.ver
